# nixv

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/NixLogs/: types.rs
src/nix_args/: common_args.rs  mod.rs
src/nix_commands/: mod.rs  nix_build.rs  nix_build_flake.rs  nix_develop_flake.rs  nix_shell.rs
src/nix_logs/: helpers.rs  mod.rs  parser.rs  process_logs.rs  types.rs
src/nix_tracker/: types.rs
