[package]
name = "nixv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
log = "0.4.0"
env_logger = "0.10.0"
ratatui = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = []}
strip-ansi-escapes = "0.2.0"
use = "0.0.0"
yansi = "1.0.0-gamma"
chrono = "0.4.31"
